<resources>
    <string name="app_name" translatable="false">likelab</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="name" translatable="false">Name :</string>
    <string name="date" translatable="false">Date :</string>
    <string name="time" translatable="false">Time :</string>
    <string name="add" translatable="false">ADD</string>
    <string name="username" translatable="false">Username :</string>
    <string name="addItem" translatable="false">Add Item</string>
    <string name="confirm" translatable="false">Confirm</string>
    <string name="editItem" translatable="false">Edit Item</string>
    <string name="language" >Language EN</string>
    <string name="logout" translatable="false">Log out</string>
    <string name="deletealldata" translatable="false">Delete All Data</string>

</resources>
