<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".SettingFragment">

    <TextView
        android:id="@+id/textViewLanguage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#00BCD4"
        android:textSize="24sp"
        android:text="@string/language"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/textViewLogout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="24sp"
        android:text="@string/logout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/textViewDelete"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="24sp"
        android:text="@string/deletealldata" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />
</LinearLayout>